Optimizations, code clean-up and localizations